--- a/main/webapp/resources/css/styles.css
+++ b/main/webapp/resources/css/styles.css
@@ -1,7 +1,7 @@
 #promo {
   text-align:center;
   padding:40px;
-  background:url(../../assets/img/background.jpg) no-repeat;
+  background:url(../img/background.jpg) no-repeat;
   background-size:cover;
   margin-top:0px;
   margin-bottom:20px;
