--- a/main/webapp/resources/css/styles.css
+++ b/main/webapp/resources/css/styles.css
@@ -4,7 +4,7 @@
   background:url(../img/background.jpg) no-repeat;
   background-size:cover;
   margin-top:0px;
-  margin-bottom:20px;
+  margin-bottom:15px;
 }
 #detail{
 	font-size:3ex;
@@ -81,7 +81,7 @@ body {
 }
 
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
-  background-color:rgb(255,255,118);
+  background-color:transparent;
   border-color:transparent;
 }
 
