건영씨 디자인수정 반영 _ 20170824

--- a/main/webapp/resources/css/styles.css
+++ b/main/webapp/resources/css/styles.css
@@ -4,7 +4,22 @@
   background:url(../img/background.jpg) no-repeat;
   background-size:cover;
   margin-top:0px;
-  margin-bottom:15px;
+  margin-bottom:20px;
+}
+a:hover{
+	text-decoration:none;
+}
+#boardtitle{
+	font-weight:bold;
+}
+#boardwritter{
+	font-weight:100;
+}
+#boardspace{
+	font-weight:100;
+}
+#boardduedate{
+	font-weight:bold;
 }
 #detail{
 	font-size:3ex;
